ajout bouton pour page 2e niveau

--- a/vivreici.html
+++ b/vivreici.html
@@ -54,7 +54,8 @@
                 </ul>
                 <!--  BURGER  -->
                 <button class="d-lg-none btn text-white fs-3" type="button" data-bs-toggle="offcanvas"
-                    data-bs-target="#menuMobile" aria-controls="menuMobile" aria-label="menuburger"><i class="bi bi-list"></i>
+                    data-bs-target="#menuMobile" aria-controls="menuMobile" aria-label="menuburger"><i
+                        class="bi bi-list"></i>
 
                 </button>
                 <!-- Logo -->
@@ -93,7 +94,7 @@
                     </li>
                     <li class="nav-item">
                         <a href="https://www.ville.daveluyville.qc.ca/demandes-de-permis" class="nav-link text-dark ">
-                            <i class="bi bi-phone bi mx-auto mb-1 fs-2 text-center " aria-hidden="true" aria-label="nous joindre">
+                            <i class="bi bi-phone bi mx-auto mb-1 fs-2 text-center " aria-hidden="true">
                             </i>Nous joindre</a>
                     </li>
                 </ul>
@@ -124,6 +125,78 @@
             <h1 class="display-3 ms-5">Vivre ici!</h1>
             <h2 class="display-6 fst-italic ms-5 mt-4">Daveluyville se démarque ! </h2>
 
+            <div class=" carousel-vivre container my-5">
+                <div class="row g-4 text-center">
+                    <div class="col-md-4">
+                        <h2 class="display-5">PARCS</h2>
+                        <div id="carousel1" class="carousel slide" data-bs-ride="carousel">
+                            <div class="carousel-inner carousel-vivre-inner rounded">
+                                <div class="carousel-item active">
+                                    <img src="Daveluyville-Images/daveluyville-2020-jasmin-lambert-02.jpg"
+                                        alt="vue aérienne ville" class="d-block w-100 h-100">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="Daveluyville-Images/jeux_deau_-_parc_beaudoin.jpg"
+                                        alt="jeux d'eau parc beaudoin" class="d-block w-100 h-100">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="Daveluyville-Images/parc-beaudoin-ete.jpg" class="d-block w-100 h-60"
+                                        alt="module parc beaudoin">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="Daveluyville-Images/Parc-ecole.jpg" class="d-block w-100"
+                                        alt="parc de l'école">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <h2 class="display-5">SPORTS</h2>
+                        <div id="carousel2" class="carousel slide" data-bs-ride="carousel">
+                            <div class="carousel-inner carousel-vivre-inner rounded">
+                                <div class="carousel-item active">
+                                    <img src="Daveluyville-Images/sports-terrain-dek.jpg" class="d-block w-100"
+                                        alt="terrain dekhockey">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="Daveluyville-Images/parc-hiver-glissade.jpg" class="d-block w-100"
+                                        alt="parc-hiver-glissade">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="Daveluyville-Images/photo_gymnase_5.jpg" class="d-block w-100"
+                                        alt="gymnase-école">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="Daveluyville-Images/tennis.jpg" class="d-block w-100 h-100"
+                                        alt="terrain tennis">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <h2 class="display-5 text-center">ACTIVITÉS</h2>
+                        <div id="carousel3" class="carousel slide" data-bs-ride="carousel">
+                            <div class="carousel-inner carousel-vivre-inner rounded">
+                                <div class="carousel-item active">
+                                    <img src="Daveluyville-Images/logo-jeudis-micros.jpg" class="d-block w-100"
+                                        alt=" logo-jeudis-micros">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="Daveluyville-Images/activite-balade-parc.jfif" class="d-block w-100"
+                                        alt="activité-balade-gourmande">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="Daveluyville-Images/activite-brasierville.jpg" class="d-block w-100"
+                                        alt="brasierville">
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+
+                </div>
+
+            </div>
 
 
 
