Ajustement page loisirs cart6e déplacer à cause de validation

--- a/municipalite.html
+++ b/municipalite.html
@@ -138,7 +138,8 @@
                         <div class="col-lg-4 align-items-center text-center">
 
                             <img src="Daveluyville-Images/salle-conseil.jfif" alt="salle-du-conseil"
-                                aria-label="consulter" class="bd-placeholder-img rounded-circle" height="140"  width="140">
+                                aria-label="consulter" class="bd-placeholder-img rounded-circle" height="140"
+                                width="140">
                             <h3 class="fw-normal">Scéance du conseil</h3>
                             <p>
                                 le 15 décembre 2025 <br>19h00 au Centre Piché.
@@ -273,11 +274,12 @@
                     </p>
                     <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3">
                         <a href="https://histoire-du-quebec.ca/daveluyville/" aria-label="histoire-du-quebec"> </a>
-                            <button type="button" class="btn btn-primary btn-lg px-4 me-md-2 fw-bold">
-                                Histoire de la ville
-                            </button>
-                       
-                        <button type="button" class="btn btn-outline-secondary btn-lg px-4" aria-label="bouton-interpretation-logo">
+                        <button type="button" class="btn btn-primary btn-lg px-4 me-md-2 fw-bold">
+                            Histoire de la ville
+                        </button>
+
+                        <button type="button" class="btn btn-outline-secondary btn-lg px-4"
+                            aria-label="bouton-interpretation-logo">
                             Interprétation du Logo de la ville
                         </button>
                     </div>
@@ -331,7 +333,7 @@
                         <a href="https://histoire-du-quebec.ca/daveluyville/" class="nav-link p-0 text-white">Histoire
                             de la ville</a>
                     </li>
-                </ul>
+
             </div>
 
             <div class="col-md-5 offset-md-1 mb-3">
@@ -346,6 +348,22 @@
                             alt="accès Portail Voilà"></a>
                 </div>
             </div>
+            <div class="mb-3">
+                <p class="mb-1 text-white">Adresse</p>
+                <p>2, rue de l'Hôtel de Ville<br>Daveluyville (Québec) G0Z 1C0</p>
+            </div>
+
+            <div class="mb-3">
+                <p class="mb-1 text-white">Coordonnées</p>
+
+                <i class="bi bi-telephone-fill text-primary text-white"> <a class="text-white " href="#"></i> (819)
+                367-3395<br></a>
+                <i class="bi bi-envelope-fill text-primary text-white"><a class="text-white " href="#"></i>
+                info@daveluyville.qc.ca</a>
+
+            </div>
+            
+
         </div>
         <div class="d-flex flex-column flex-sm-row justify-content-between py-2 border-top">
             <p class="p-3">&copy; 2025 Company, Inc. All rights reserved.</p>
