ajustements coordonées footer

--- a/vivreici.html
+++ b/vivreici.html
@@ -362,6 +362,21 @@
                             alt="accès Portail Voilà"></a>
                 </div>
             </div>
+            <div class="mb-3">
+
+                <p class="mb-1 text-white">Adresse</p>
+                <p>2, rue de l'Hôtel de Ville<br>Daveluyville (Québec) G0Z 1C0</p>
+            </div>
+
+            <div class="mb-3">
+                <p class="mb-1 text-white">Coordonnées</p>
+
+                <i class="bi bi-telephone-fill text-primary text-white"> <a class="text-white " href="#"> (819)
+                        367-3395 <br></a></i>
+                <i class="bi bi-envelope-fill text-primary text-white"><a class="text-white" href="#">
+                        info@daveluyville.qc.ca</a></i>
+
+            </div>
         </div>
         <div class="d-flex flex-column flex-sm-row justify-content-between py-2 border-top">
             <p class="p-3">&copy; 2025 Company, Inc. All rights reserved.</p>
