--- a/acceuil.html
+++ b/acceuil.html
@@ -25,28 +25,25 @@
                 <ul class="nav d-none d-lg-flex align-items-center gap-3">
                     <li class="nav-item">
                         <a href="loisirs.html" class="nav-link lien-header"> <i
-                                class="bi bi-tree-fill bi d-block mx-auto mb-1 fs-2 text-center " 
-                                aria-hidden="true">
+                                class="bi bi-tree-fill bi d-block mx-auto mb-1 fs-2 text-center " aria-hidden="true">
                             </i>Socioculturelle</a>
                     </li>
                     <li class="nav-item">
                         <a href="https://www.ville.daveluyville.qc.ca/demandes-de-permis" class="nav-link lien-header">
-                            <i class="bi bi-houses-fill bi d-block mx-auto mb-1 fs-2 text-center" 
-                                aria-hidden="true">
+                            <i class="bi bi-houses-fill bi d-block mx-auto mb-1 fs-2 text-center" aria-hidden="true">
 
                             </i>Citoyens</a>
                     </li>
                     <li class="nav-item">
                         <a href="municipalite.html" class="nav-link lien-header"> <i
-                                class="bi bi-bank bi d-block mx-auto mb-1 fs-2 text-center" 
-                                aria-hidden="true">
-                              
+                                class="bi bi-bank bi d-block mx-auto mb-1 fs-2 text-center" aria-hidden="true">
+
                             </i>Municipalité</a>
                     </li>
                     <li class="nav-item">
                         <a href="https://www.ville.daveluyville.qc.ca/contact" class="nav-link lien-header"> <i
-                                class="bi bi-phone bi d-block mx-auto mb-1 fs-2 text-center" 
-                                aria-hidden="true"></i>Nous joindre</a>
+                                class="bi bi-phone bi d-block mx-auto mb-1 fs-2 text-center" aria-hidden="true"></i>Nous
+                            joindre</a>
                     </li>
 
                     <li class="nav-item me-5 ">
@@ -76,32 +73,28 @@
                 <ul class="nav flex-column gap-3">
                     <li class="nav-item">
                         <a href="https://www.ville.daveluyville.qc.ca/demandes-de-permis" class="nav-link  ">
-                            <i class="bi bi-tree-fill bi  mx-auto mb-1 fs-2 text-center " 
-                                aria-hidden="true">
+                            <i class="bi bi-tree-fill bi  mx-auto mb-1 fs-2 text-center " aria-hidden="true">
 
 
                             </i>Socioculturelle</a>
                     </li>
                     <li class="nav-item">
                         <a href="https://www.ville.daveluyville.qc.ca/demandes-de-permis" class="nav-link ">
-                            <i class="bi bi-houses-fill bi  mx-auto mb-1 fs-2 text-center "
-                                aria-hidden="true">
+                            <i class="bi bi-houses-fill bi  mx-auto mb-1 fs-2 text-center " aria-hidden="true">
 
 
                             </i>Citoyens</a>
                     </li>
                     <li class="nav-item">
                         <a href="https://www.ville.daveluyville.qc.ca/demandes-de-permis" class="nav-link ">
-                            <i class="bi bi-bank bi  mx-auto mb-1 fs-2 text-center " 
-                                aria-hidden="true">
+                            <i class="bi bi-bank bi  mx-auto mb-1 fs-2 text-center " aria-hidden="true">
 
 
                             </i>Municipalités</a>
                     </li>
                     <li class="nav-item">
                         <a href="https://www.ville.daveluyville.qc.ca/demandes-de-permis" class="nav-link ">
-                            <i class="bi bi-phone bi  mx-auto mb-1 fs-2 text-center " 
-                                aria-hidden="true">
+                            <i class="bi bi-phone bi  mx-auto mb-1 fs-2 text-center " aria-hidden="true">
                             </i>Nous joindre</a>
                     </li>
                 </ul>
@@ -149,20 +142,21 @@
                         <div class="container">
                             <div class=" carousel-caption text-end">
                                 <h2 class="display-2">Infolettre</h2>
-                                    <p class="display-6">
-                                        Inscrivez-vous à l'infolettre pour recevoir toutes les actualités de la ville.
-                                    </p>
-                                    <p>
-                                        <a class="btn btn-lg btn-primary"
-                                            href="https://www.ville.daveluyville.qc.ca/accueil">S'inscrire</a>
-                                    </p>
+                                <p class="display-6">
+                                    Inscrivez-vous à l'infolettre pour recevoir toutes les actualités de la ville.
+                                </p>
+                                <p>
+                                    <a class="btn btn-lg btn-primary"
+                                        href="https://www.ville.daveluyville.qc.ca/accueil">S'inscrire</a>
+                                </p>
                             </div>
                         </div>
                     </div>
                     <!-- Carousel #2-->
                     <div class="carousel-item">
 
-                        <img class="img-fluid w-100" src="Daveluyville-Images/Hiver-sapin-parc.jpg" alt="Hiver-sapin-parc">
+                        <img class="img-fluid w-100" src="Daveluyville-Images/Hiver-sapin-parc.jpg"
+                            alt="Hiver-sapin-parc">
                         <svg aria-hidden="true" class="bd-placeholder-img" height="100%"
                             preserveAspectRatio="xMidYMid slice" width="100%" xmlns="http://www.w3.org/2000/svg">
                             <rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect>
@@ -180,7 +174,8 @@
                     </div>
                     <!-- Carousel #3-->
                     <div class="carousel-item">
-                        <img class="img-fluid w-100" src="Daveluyville-Images/daveluyville_1.jpg" alt=" vue-aérienne-de-la-ville">
+                        <img class="img-fluid w-100" src="Daveluyville-Images/daveluyville_1.jpg"
+                            alt=" vue-aérienne-de-la-ville">
                         <svg aria-hidden="true" class="bd-placeholder-img " height="100%"
                             preserveAspectRatio="xMidYMid slice" width="100%" xmlns="http://www.w3.org/2000/svg">
                             <rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect>
@@ -277,27 +272,27 @@
                     <div class="col-12 col-md-6 col-lg-3 mb-4">
                         <iframe
                             src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Ffetedavel%2Fposts%2Fpfbid0Aa9AVQrnVxqBBEAUZdJXQkMVLDEGmWswm1t6Quv7Xg3Y92qPfZbtEgZK4a2HULjrl&show_text=true&width=500"
-                            width="300" height="374" style="border:none" 
+                            width="300" height="374" style="border:none"
                             allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
                     </div>
                     <div class="col-12 col-md-6 col-lg-3 mb-4">
                         <iframe
                             src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Ffetedavel%2Fposts%2Fpfbid0vWZRfuEoqpLf8xNhLXVjCq89sZqYxF97MYReAFNJRh9kqXfBdQ8XScKyX8VvoFjMl&show_text=true&width=500"
-                            width="300" height="374" style="border:none;overflow:hidden"  
+                            width="300" height="374" style="border:none;overflow:hidden"
                             allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
 
                     </div>
                     <div class="col-12 col-md-6 col-lg-3 mb-4">
                         <iframe
                             src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2FCentreSportifPiche%2Fposts%2Fpfbid02GrFHHtFEFdyKuZBpzNUWWokq6hDVKrris6froNcJFd7nn62N2gNmvXrsWXtdDv92l&show_text=true&width=500"
-                            width="300" height="374" style="border:none;overflow:hidden"  
+                            width="300" height="374" style="border:none;overflow:hidden"
                             allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
                     </div>
 
                     <div class="col-12 col-md-6 col-lg-3 mb-4">
                         <iframe
                             src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2FCentreSportifPiche%2Fposts%2Fpfbid02z5WdBVvTqKPVo4ARctdPdGRBtDLHnbw31n52eV8GQyZbgfT6b6xiN2kFGGHg4K1bl&show_text=true&width=500"
-                            width="300" height="374" style="border:none;overflow:hidden" 
+                            width="300" height="374" style="border:none;overflow:hidden"
                             allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
                     </div>
                 </div>
@@ -358,6 +353,21 @@
                         <img class="img-fluid" src="Daveluyville-Images/logo-voila-davel.png"
                             alt="accès Portail Voilà"></a>
                 </div>
+            </div>
+            <div class="mb-3">
+
+                <p class="mb-1 text-white">Adresse</p>
+                <p>2, rue de l'Hôtel de Ville<br>Daveluyville (Québec) G0Z 1C0</p>
+            </div>
+
+            <div class="mb-3">
+                <p class="mb-1 text-white">Coordonnées</p>
+
+                <i class="bi bi-telephone-fill text-primary text-white"> <a class="text-white " href="#"> (819)
+                        367-3395 <br></a></i>
+                <i class="bi bi-envelope-fill text-primary text-white"><a class="text-white" href="#">
+                        info@daveluyville.qc.ca</a></i>
+
             </div>
         </div>
         <div class="d-flex flex-column flex-sm-row justify-content-between py-2 border-top">
