modification de la page d'acceuil pour index pour la mise en ligne

--- a/municipalite.html
+++ b/municipalite.html
@@ -18,7 +18,7 @@
         <div class="border-bottom bg-municipalite">
             <div class=" d-flex align-items-center py-3">
 
-                <a href="acceuil.html" class="me-auto">
+                <a href="index.html" class="me-auto">
                     <img class="ms-5" src="Daveluyville-Images/logo-ville-texte-blanc.png" alt="logo de la ville"
                         style="height: 80px;">
                 </a>
