--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 </ul>
                 <!--  BURGER  -->
                 <button class="d-lg-none btn text-white fs-3" type="button" data-bs-toggle="offcanvas"
-                    data-bs-target="#menuMobile" aria-controls="menuMobile"> #<i class="bi bi-list"></i>
+                    data-bs-target="#menuMobile" aria-controls="menuMobile"> <i class="bi bi-list"></i>
 
                 </button>
                 <!-- Logo -->
@@ -65,11 +65,11 @@
         <!-- Responsive -->
         <div class="offcanvas offcanvas-end  h-50 " tabindex="-1" id="menuMobile">
             <div class="offcanvas-header">
-                <h5 class="offcanvas-title">Menu</h5>
+                <h5 class="offcanvas-title ">Menu</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="bouton fermer"></button>
             </div>
 
-            <div class="offcanvas-body">
+            <div class="offcanvas-body bg-ville">
                 <ul class="nav flex-column gap-3">
                     <li class="nav-item">
                         <a href="https://www.ville.daveluyville.qc.ca/demandes-de-permis" class="nav-link  ">
