modif des liens menu burger

--- a/index.html
+++ b/index.html
@@ -72,28 +72,28 @@
             <div class="offcanvas-body bg-ville">
                 <ul class="nav flex-column gap-3">
                     <li class="nav-item">
-                        <a href="https://www.ville.daveluyville.qc.ca/demandes-de-permis" class="nav-link  ">
+                        <a href="loisirs.html" class="nav-link  ">
                             <i class="bi bi-tree-fill bi  mx-auto mb-1 fs-2 text-center " aria-hidden="true">
 
 
                             </i>Socioculturelle</a>
                     </li>
                     <li class="nav-item">
-                        <a href="https://www.ville.daveluyville.qc.ca/demandes-de-permis" class="nav-link ">
+                        <a href="#" class="nav-link ">
                             <i class="bi bi-houses-fill bi  mx-auto mb-1 fs-2 text-center " aria-hidden="true">
 
 
                             </i>Citoyens</a>
                     </li>
                     <li class="nav-item">
-                        <a href="https://www.ville.daveluyville.qc.ca/demandes-de-permis" class="nav-link ">
+                        <a href="municipalite.html" class="nav-link ">
                             <i class="bi bi-bank bi  mx-auto mb-1 fs-2 text-center " aria-hidden="true">
 
 
                             </i>Municipalités</a>
                     </li>
                     <li class="nav-item">
-                        <a href="https://www.ville.daveluyville.qc.ca/demandes-de-permis" class="nav-link ">
+                        <a href="#" class="nav-link ">
                             <i class="bi bi-phone bi  mx-auto mb-1 fs-2 text-center " aria-hidden="true">
                             </i>Nous joindre</a>
                     </li>
