--- a/municipalite.html
+++ b/municipalite.html
@@ -69,7 +69,7 @@
                 <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="menu-mobile"></button>
             </div>
 
-            <div class="offcanvas-body bg-ville">
+            <div class="offcanvas-body ">
                 <ul class="nav flex-column gap-3">
                     <li class="nav-item">
                         <a href="loisirs.html" class="nav-link text-dark ">
