ajustement responsive nom des conseiller

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                     <div class="card" style="width: 25rem;">
                         <div class="card-body bg-body-hotel-de-ville">
                             <h5 class="card-title">Infolettre</h5>
-                            <h6 class="card-subtitle mb-2 text-body-secondary">Inscrivez-vous pour rester inform.é!</h6>
+                            <h6 class="card-subtitle mb-2 text-body-secondary">Inscrivez-vous pour rester informés!</h6>
 
                             <a href="#" class="card-link">S'inscrire</a>
                             <a href="#" class="card-link">Consulter l'infolettre</a>
