--- a/municipalite.html
+++ b/municipalite.html
@@ -194,7 +194,7 @@
                 <div class="col-lg-4 align-items-center text-center mb-4">
                     <img src="Daveluyville-Images/équipe-maire.jpg" alt="Maire de la ville"
                         class="img-fluid rounded shadow" style="max-width: 80%; height: auto;">
-                    <h3 class="fw-normal">MATHIEU</h3>
+                    <h3 class="fw-normal">Mathieu Allard</h3>
                     <p>
                         Maire
                     </p>
@@ -207,7 +207,7 @@
                         <div class="col-4">
                             <img src="Daveluyville-Images/équipe-nadialeclerc.jpg" alt="nadia-leclerc"
                                 class=" img-fluid rounded-circle" height="180" width="180">
-                            <h3 class="fw-normal">Nadia Leclerc</h3>
+                            <h3 class="fw-normal fs-6">Nadia Leclerc</h3>
                             <p>
                                 Conseillère no. 1
                             </p>
@@ -215,7 +215,7 @@
                         <div class="col-4">
                             <img src="Daveluyville-Images/équipe-sébastienbilodeau.jpg" alt="sébastien-bilodeau"
                                 class=" img-fluid rounded-circle" height="180" width="180">
-                            <h3 class="fw-normal">Sébastien Bilodeau</h3>
+                            <h3 class="fw-normal fs-6 ">Sébastien Bilodeau</h3>
                             <p>
                                 Conseillère no. 2
                             </p>
@@ -223,7 +223,7 @@
                         <div class="col-4">
                             <img src="Daveluyville-Images/équipe-valérieloiselle.jpg" alt="valérie-loiselle"
                                 class=" img-fluid rounded-circle" height="180" width="180">
-                            <h3 class="fw-normal">Valérie Loiselle</h3>
+                            <h3 class="fw-normal fs-6">Valérie Loiselle</h3>
                             <p>
                                 Conseillère no. 3
                             </p>
@@ -231,7 +231,7 @@
                         <div class="col-4">
                             <img src="Daveluyville-Images/équipe-alainraymond.jpg" alt="alain-raymond"
                                 class=" img-fluid rounded-circle" height="180" width="180">
-                            <h3 class="fw-normal">Alain Raymond</h3>
+                            <h3 class="fw-normal fs-6">Alain Raymond</h3>
                             <p>
                                 Conseillère no. 4
                             </p>
@@ -239,7 +239,7 @@
                         <div class="col-4">
                             <img src="Daveluyville-Images/équipe-caroleanneprovencher.jpg" alt="carolannne-provencher"
                                 class=" img-fluid rounded-circle" height="180" width="180">
-                            <h3 class="fw-normal">Carol-Anne Provencher</h3>
+                            <h3 class="fw-normal fs-6 ">Carol-Anne Provencher</h3>
                             <p>
                                 Conseillère no. 5
                             </p>
@@ -247,7 +247,7 @@
                         <div class="col-4">
                             <img src="Daveluyville-Images/équipe-christinegentes.jpg" alt="christine-gentes"
                                 class=" img-fluid rounded-circle" height="180" width="180">
-                            <h3 class="fw-normal">Christine Gentes</h3>
+                            <h3 class="fw-normal fs-6">Christine Gentes</h3>
                             <p>
                                 Conseillère no. 6
                             </p>
@@ -362,7 +362,7 @@
                 info@daveluyville.qc.ca</a>
 
             </div>
-            
+
 
         </div>
         <div class="d-flex flex-column flex-sm-row justify-content-between py-2 border-top">
