ajustement titre loisirs responsive

--- a/loisirs.html
+++ b/loisirs.html
@@ -73,9 +73,7 @@
                 <ul class="nav flex-column gap-3">
                     <li class="nav-item">
                         <a href="loisirs.html" class="nav-link text-dark ">
-                            <i class="bi bi-tree-fill bi  mx-auto mb-1 fs-2 text-center " aria-hidden="true">
-
-
+                            <i class="bi bi-tree-fill bi  mx-auto mb-1 fs-2 " aria-hidden="true">
                             </i>Socioculturelle</a>
                     </li>
                     <li class="nav-item">
