ajustement onglets responsive accueil

--- a/index.html
+++ b/index.html
@@ -223,21 +223,21 @@
                     </h4>
                     <p class="lead text-center text-md-center">
                         La ville souhaite un joyeux temps des fêtes à tous les citoyens </p>
-                    <div class="card mb-1" style="width: 25rem;">
+                    <div class="card w-100 mb-1 d-flex">
                         <div class="card-body bg-body-loisirs">
                             <h5 class="card-title">Journal Le causeur</h5>
                             <h6 class="card-subtitle mb-2 text-body-secondary">Décembre 2025</h6>
-                            <a href="#" class="card-link">Consulter</a>
-                            <a href="#" class="card-link">Archives</a>
+                            <a href="#" class="card-link text-dark">Consulter</a>
+                            <a href="#" class="card-link text-dark">Archives</a>
                         </div>
                     </div>
-                    <div class="card" style="width: 25rem;">
+                    <div class="card w-100 d-flex">
                         <div class="card-body bg-body-hotel-de-ville">
                             <h5 class="card-title">Infolettre</h5>
-                            <h6 class="card-subtitle mb-2 text-body-secondary">Inscrivez-vous pour rester informés!</h6>
+                            <h6 class="card-subtitle mb-2 text-body-secondary">Inscrivez-vous pour rester informé!</h6>
 
-                            <a href="#" class="card-link">S'inscrire</a>
-                            <a href="#" class="card-link">Consulter l'infolettre</a>
+                            <a href="#" class="card-link text-dark">S'inscrire</a>
+                            <a href="#" class="card-link text-dark">Consulter l'infolettre</a>
                         </div>
                     </div>
                 </div>
