--- a/loisirs.html
+++ b/loisirs.html
@@ -393,7 +393,7 @@
                                 </div>
                             </div>
                         </section>
-                        <h3 class="display-3 fst-italic mt-1 mb-4 text-center">Organismes communautaires</h3>
+                        <h3 class="display-3 fst-italic mt-1 mb-4 text-center">Organismes</h3>
                         <div class="row justify-content-center">
                             <div class="col-sm-4 mb-3 mb-sm-0">
                                 <div class="card h-100 bg-body-loisirs  ">
