--- a/index.html
+++ b/index.html
@@ -140,10 +140,10 @@
                             <rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect>
                         </svg>
                         <div class="container">
-                            <div class=" carousel-caption text-end">
+                            <div class=" carousel-caption text-center">
                                 <h2 class="display-2">Infolettre</h2>
                                 <p class="display-6">
-                                    Inscrivez-vous à l'infolettre pour recevoir toutes les actualités de la ville.
+                                    Inscrivez-vous à l'infolettre pour recevoir <br> toutes les actualités de la ville.
                                 </p>
                                 <p>
                                     <a class="btn btn-lg btn-primary"
