Justement respnsive carousel accueil

--- a/index.html
+++ b/index.html
@@ -163,9 +163,9 @@
                         </svg>
                         <div class="container">
                             <div class="carousel-caption">
-                                <h2 class="display-2">Vivre ici !</h2>
+                                <h2 class="display-2">Vivre ici</h2>
                                 <p class="display-6">
-                                    Une ville familliale en expansion, au coeur de la nature qui offre des espaces
+                                    Une ville familliale en expansion, au coeur de la nature <br> qui offre des espaces
                                     communautaires de qualité à ses citoyens.
                                 </p>
                                 <p><a class="btn btn-lg btn-primary" href="vivreici.html">Découvrir la ville</a></p>
@@ -184,7 +184,7 @@
                             <div class="carousel-caption text-end">
                                 <h1 class="display-1">Parc industriel</h1>
                                 <p class="display-6">
-                                    Bienvenue aux entrepeneurs commerciale,découvrez les opportunités d'affaires et
+                                    Bienvenue aux entrepeneurs commerciale, découvrez les opportunités d'affaires et
                                     de
                                     développement offertes par notre
                                     parc
