ajustement menu burger de toute les pages pour responsive

--- a/vivreici.html
+++ b/vivreici.html
@@ -63,7 +63,7 @@
         </div>
 
         <!-- Responsive -->
-        <div class="offcanvas offcanvas-end  h-50 " tabindex="-1" id="menuMobile">
+        <div class="offcanvas offcanvas  h-50 " tabindex="-1" id="menuMobile">
             <div class="offcanvas-header">
                 <h5 class="offcanvas-title">Menu</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="bouton fermer"></button>
