--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@
                             <rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect>
                         </svg>
                         <div class="container">
-                            <div class=" carousel-caption text-center">
-                                <h2 class="display-2">Infolettre</h2>
+                            <div class=" carousel-caption ">
+                                <h2 class="display-2 text-center">Infolettre  </h2>
                                 <p class="display-6">
                                     Inscrivez-vous à l'infolettre pour recevoir <br> toutes les actualités de la ville.
                                 </p>
