--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                         <div class="container">
                             <div class=" carousel-caption ">
                                 <h2 class="display-2 text-center">Infolettre  </h2>
-                                <p class="display-6">
+                                <p class="display-6 fs-6">
                                     Inscrivez-vous à l'infolettre pour recevoir <br> toutes les actualités de la ville.
                                 </p>
                                 <p>
@@ -164,7 +164,7 @@
                         <div class="container">
                             <div class="carousel-caption">
                                 <h2 class="display-2">Vivre ici</h2>
-                                <p class="display-6">
+                                <p class="display-6 fs-6">
                                     Une ville familliale en expansion, au coeur de la nature <br> qui offre des espaces
                                     communautaires de qualité à ses citoyens.
                                 </p>
@@ -183,7 +183,7 @@
                         <div class="container">
                             <div class="carousel-caption text-end">
                                 <h1 class="display-1">Parc industriel</h1>
-                                <p class="display-6">
+                                <p class="display-6 fs-6">
                                     Bienvenue aux entrepeneurs commerciale, découvrez les opportunités d'affaires et
                                     de
                                     développement offertes par notre
