--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                         </svg>
                         <div class="container">
                             <div class=" carousel-caption ">
-                                <h2 class="display-2 text-center">Infolettre  </h2>
+                                <h2 class="display-2 fs-3 text-center">Infolettre  </h2>
                                 <p class="display-6 fs-6">
                                     Inscrivez-vous à l'infolettre pour recevoir <br> toutes les actualités de la ville.
                                 </p>
